--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -101,3 +101,14 @@ select {
   background-color: var(--primary-color) !important;
   color: #fff !important;
 }
+
+.ant-checkbox-checked .ant-checkbox-inner {
+  background-color: var(--primary-color) !important;
+  border-color: var(--primary-color) !important;
+}
+
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: var(--primary-color) !important;
+}
